[gd_scene load_steps=8 format=3 uid="uid://pmiiecfhjtfd"]

[ext_resource type="Script" path="res://Script/DeathSceneScript.gd" id="1_37iev"]
[ext_resource type="Texture2D" uid="uid://ct62us5qxa2sa" path="res://Asset/Pictures/death_scene_pic.png" id="1_e7nem"]
[ext_resource type="PackedScene" uid="uid://pe0qmwlpo6dj" path="res://Scene/FadeCanvas.tscn" id="2_hgbw8"]
[ext_resource type="Texture2D" uid="uid://c8smr6lhgdncc" path="res://Asset/BlackandWhiteUI.png/button-bg-normal.png" id="4_kmqn4"]
[ext_resource type="Texture2D" uid="uid://bcybsdoqoubsf" path="res://Asset/BlackandWhiteUI.png/button-bg.png" id="5_io5d5"]
[ext_resource type="FontFile" uid="uid://cvkojm80tadh5" path="res://Asset/Font/gumela/Gumela.ttf" id="6_2ly8d"]
[ext_resource type="Script" path="res://Script/DeathButton.gd" id="6_jg4r6"]

[node name="DeathScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37iev")

[node name="FadeCanvas" parent="." instance=ExtResource("2_hgbw8")]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_e7nem")

[node name="Retry" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.579
anchor_top = 0.437
anchor_right = 0.579
anchor_bottom = 0.437
offset_left = 491.32
offset_top = 60.04
offset_right = 711.32
offset_bottom = 141.04
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_kmqn4")
texture_pressed = ExtResource("5_io5d5")
texture_hover = ExtResource("5_io5d5")
texture_focused = ExtResource("5_io5d5")
stretch_mode = 0
script = ExtResource("6_jg4r6")

[node name="Label" type="Label" parent="Retry"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_2ly8d")
theme_override_font_sizes/font_size = 32
text = "RETRY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.579
anchor_top = 0.437
anchor_right = 0.579
anchor_bottom = 0.437
offset_left = 491.32
offset_top = 176.04
offset_right = 711.32
offset_bottom = 257.04
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_kmqn4")
texture_pressed = ExtResource("5_io5d5")
texture_hover = ExtResource("5_io5d5")
texture_focused = ExtResource("5_io5d5")
stretch_mode = 0

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_2ly8d")
theme_override_font_sizes/font_size = 32
text = "MAIN MENU"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Retry" to="Retry" method="_on_retry_button_pressed"]
[connection signal="pressed" from="MainMenu" to="Retry" method="_on_main_menu_button_pressed"]
